# ipdata

./: Dockerfile  README.md  alembic-db.ini  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: python-package.yml
alembic/versions/: b1635d5b4718_create_ipdata_and_location_tables.py
ipdata/: db.py  settings.py
ipdata/app/: main.py  utils.py
ipdata/models/: ip_data.py
ipdata/schemas/: ipdata.py
ipdata/services/ip_client/: base_ip_client.py  data.py  exceptions.py  ip_stack_client.py
tests/: conftest.py
tests/ipdata/: responses.py  test_app.py  test_ip_stack_client.py
